# weave-bootstrap

./: .cursorrules  CMakeLists.txt  README.md  build.sh
.cursor/rules/: commit-procedure.mdc  cursor-rules.mdc  file-naming-convention.mdc  no-workarounds.mdc  stage-architecture.mdc
.github/prompt/: commit-changes.prompt.md
docs/: diagnostics_implementation.md  embedded_tests.md  failing_tests_report.txt  llvm_auto_build.md  llvm_integration_analysis.md  llvm_integration_status.md  weave_embedded_testing_memo.md
docs/coding_guidelines/: syntax.md
docs/sessions/: 2024-12-22-get-field-syntax-and-weavec2-bootstrap-issue.md  2025-01-23-arena-kind-type-investigation.md  2025-01-23-compiler-bugs-blocking-tests.md  2025-01-23-fix-memory-corruption-typechecker.md  2025-01-23-high-impact-improvements.md  2025-01-23-implementation-complete.md  2025-01-23-julia-intrinsics-analysis.md  2025-01-23-julia-intrinsics-research.md  2025-01-23-julia-patterns-implementation.md  2025-01-23-julia-patterns-to-adopt.md  2025-01-23-julia-style-builtin-registry.md  2025-01-23-ptr-add-compilation-bug-analysis.md  2025-01-23-ptr-add-fix-attempts.md  2025-01-23-ptr-add-investigation.md  2025-01-23-refactoring-compile-expr.md  2025-01-23-scientific-computing-examples.md  2025-01-23-scientific-tests-ready.md  2025-01-23-stage-architecture-clarification.md  2025-01-23-stage-architecture-refactoring.md  2025-01-23-test-failures-analysis.md  2025-01-23-test-integration.md  2025-01-23-test-reorganization-complete.md  2025-01-23-three-high-impact-pull-requests.md  2025-01-23-three-new-high-impact-pull-requests.md  2025-01-23-type-system-improvements.md  2025-12-23-proposed-high-impact-pull-requests.md
stage0/: CMakeLists.txt  README.md
stage0/include/: builtins.h  cgutils.h  codegen.h  common.h  compiler.h  diagnostics.h  env.h  fn_table.h  fs.h  ir.h  lexer.h  llvm_compile.h  sexpr.h  stats.h  type_env.h  types.h
stage0/runtime/: runtime.c  stdlib_runtime.c
stage0/src/: builtins.c  cgutils.c  common.c  diagnostics.c  env.c  expr.c  fn_table.c  fs.c  ir.c  lexer.c  llvm_compile.c  llvm_compile_helper.c  llvm_jit.cpp  llvm_jit_helper.c  main.c  program.c  sexpr.c  stats.c  stmt.c  test_jit.c  type_env.c  types.c  value.c
stage0/tests/: run_embedded_tests.cmake  run_test.cmake  test_addr_load_store_int_return42.weave  test_ccall_abs_return42.weave  test_ccall_puts_stringlit_return42.weave  test_embedded_tests_demo.weave  test_fn_call_return42.weave  test_jit.weave  test_llvm_jit_simple.weave  test_return42.weave  test_struct_make_get_return42.weave  test_struct_set_field_return42.weave  test_typed_fn_param_string_return42.weave  test_typed_fn_return_string_return42.weave
stage1/: CMakeLists.txt  README.md  build.sh
stage1/src/: arena.weave  arrays.weave  buffer.weave  buffers.weave  cli.weave  debug.weave  file_io.weave  include_expand.weave  ir_gen.weave  libc.weave  lower.weave  prelude.weave  prelude_arrays.weave  prelude_buffer.weave  prelude_strings.weave  sexpr_parser.weave  string.weave  tokenizer.weave  weavec1.weave
stage1/src/arena/: core_ops.weave  core_types.weave  tests.weave
stage1/src/ir/: emit.weave  expr.weave  expr_binops.weave  expr_ccall.weave  expr_core.weave  expr_literals.weave  expr_structs.weave  ir_fns.weave  ir_runtime.weave  ir_util.weave  main.weave  ops.weave  pointers.weave  stmt.weave  stmt_core.weave  types.weave  util.weave  util_env.weave  util_lists.weave  util_lists_core.weave  util_lists_tests.weave  util_strings.weave  util_strings_core.weave  util_strings_tests.weave  util_structs.weave
stage1/src/lower/: ast_builder.weave  lowering.weave  struct_ops.weave  type_env.weave
stage1/src/tokenizer/: core_chars.weave  core_read.weave  (+2 more)
stage1/tests/: run_tests.sh  test_ackermann_42.weave  test_adl_basic_42.weave  test_adl_multiple_args_42.weave  test_adl_qualified_vs_unqualified_42.weave  test_adl_simple_42.weave  test_arith_ops_42.weave  test_array_copy_42.weave  test_array_count_42.weave  test_array_fill_42.weave  test_average_42.weave  test_bitwise_and_pattern_42.weave  test_ccall_abs_42.weave  test_ccall_exit_42.weave  test_ccall_memcpy_42.weave  test_cli_like_module.weave  test_collect_cli_like_42.weave  test_collect_included_42.weave  test_collect_included_module_42.weave  test_collect_top_level_direct_42.weave  test_collect_top_level_fn_42.weave  test_concat_ints_42.weave  test_conditional_chain_42.weave  test_correlation_42.weave  test_count_until_zero_42.weave  test_digit_sum_42.weave  test_doc_ignored_42.weave  test_factorial_iterative_42.weave  test_factorial_recursive_42.weave  test_fibonacci_iterative_42.weave  test_fn_multiple_42.weave  test_fn_simple_42.weave  test_helper_module.weave  test_is_even_42.weave  test_is_prime_42.weave  test_lcm_42.weave  test_let_shadowing_42.weave  test_linear_regression_42.weave  test_matrix_add_42.weave  test_median_42.weave  (+25 more)
stage2/: CMakeLists.txt
stage2/runtime/: weave_runtime_arrays.weave
stage2/tests/: test_abs_42.weave  test_array_contains_42.weave  test_array_max_42.weave  test_array_min_42.weave  test_array_reverse_42.weave  test_binary_search_42.weave  test_bool_ops_42.weave  test_bubble_sort_42.weave.skip  test_ccall_atoi_42.weave  test_ccall_malloc_42.weave  test_clamp_42.weave  test_collatz_42.weave  test_comments_and_strings_42.weave  test_comparison_ops_42.weave  test_count_digits_42.weave  test_fibonacci_hybrid_42.weave  test_fibonacci_recursive_42.weave  test_find_index_42.weave  test_fn_ptr_param_42.weave  test_fn_recursive_42.weave  test_fn_two_params_42.weave  test_fn_with_let_42.weave  test_gcd_42.weave  test_if_eq_42.weave  test_leap_year_42.weave  test_let_add_42.weave  test_linear_interpolate_42.weave  test_linked_list_42.weave.skip  test_make_struct_42.weave  test_nested_fn_calls_42.weave  test_nested_if_42.weave  test_nested_let_42.weave  test_perfect_number_42.weave  test_ptr_add_42.weave  test_store_addr_42.weave  test_string_concat_42.weave  test_string_ops_42.weave  test_struct_like_42.weave  test_sum_array_42.weave  test_sum_divisors_42.weave  (+6 more)
tests/: test_smoke_exit_42.weave
(+13 files in other folders)
